fixes #1 fix content cutoff, rm fixed, rm justify center add flex columns

--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,6 @@
 body {
     height: 100dvh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
